<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsActivity">


    <ImageButton
        android:id="@+id/exit_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_arrow_back"
        android:contentDescription="@string/exit"
        app:layout_constraintEnd_toStartOf="@+id/offer_name_details"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/offer_name_details"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/exit_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/offer_image_details"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/offer_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_name_details" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="410dp"
        android:layout_height="296dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <WebView
            android:id="@+id/offer_description_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/description"
            android:paddingTop="40dp"
            android:textAlignment="center"
            android:textSize="20sp" />

    </ScrollView>

    <TextView

        android:id="@+id/offer_price_text"
        android:layout_width="84dp"
        android:layout_height="34dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:text="@string/price"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/offer_price_details"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_image_details" />

    <TextView
        android:id="@+id/offer_price_details"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:text="@string/amount"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/offer_price_text"
        app:layout_constraintTop_toBottomOf="@+id/offer_image_details" />

</androidx.constraintlayout.widget.ConstraintLayout>