<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/offer_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.009"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            android:contentDescription="@string/offer_image" />


        <TextView
            android:id="@+id/offer_name"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/offer_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/offer_price_text"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/offer_image"
            app:layout_constraintTop_toBottomOf="@+id/offer_name"
            app:layout_constraintVertical_bias="0.937" />

        <TextView
            android:id="@+id/offer_price"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/amount"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/offer_price_text"
            app:layout_constraintTop_toBottomOf="@+id/offer_name"
            app:layout_constraintVertical_bias="0.968" />

    </androidx.constraintlayout.widget.ConstraintLayout>


